--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Aug 17 19:28:40 UTC 2025
+#Sun Aug 24 19:22:41 UTC 2025
 accepts-transfers=false
 allow-flight=true
 allow-nether=true
@@ -29,7 +29,7 @@ level-seed=
 level-type=bclib\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=5
 max-tick-time=60000
 max-world-size=29999984
 motd=Better MC [FABRIC] 1.21.1
@@ -38,7 +38,7 @@ online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
-pvp=true
+pvp=false
 query.port=25565
 rate-limit=0
 rcon.password=
